--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,5 +7,12 @@
   </head>
   <body>
     <h1>This is Codeial <%= title %></h1>
+    <section id="feed-posts">
+      <h4>Posts</h4>
+      <form action="" method="post">
+        <textarea name="content" cols="30" rows="3"></textarea>
+        <input type="submit" value="Post" />
+      </form>
+    </section>
   </body>
 </html>
