--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,10 +9,33 @@
     <h1>This is Codeial <%= title %></h1>
     <section id="feed-posts">
       <h4>Posts</h4>
-      <form action="" method="post">
-        <textarea name="content" cols="30" rows="3"></textarea>
+      <% if (locals.user){ %>
+      <form action="posts/create" method="post">
+        <textarea
+          name="content"
+          cols="30"
+          rows="3"
+          placeholder="type here"
+        ></textarea>
         <input type="submit" value="Post" />
       </form>
+      <% } %>
+
+      <div id="posts-list-container">
+        <ul>
+          <% for(post of posts){ %>
+
+          <li>
+            <p>
+              <%= post.content %>
+              <br />
+              <small> <%= post.user.name %> </small>
+            </p>
+          </li>
+
+          <% } %>
+        </ul>
+      </div>
     </section>
   </body>
 </html>
